1. 비디오 라이브러리 plyr을 적용하여 전체화면, 10초 앞으로[뒤로], 재생 속도 등 video 태그 기능 설정 2. 버튼 hover시 bg 변경

--- a/apps/auth/templates/auth/login.html
+++ b/apps/auth/templates/auth/login.html
@@ -67,7 +67,7 @@
 
           <button
           type="submit"
-          class="w-full bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+          class="w-full bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
           >
           로그인
           </button>
