--- a/apps/auth/templates/auth/register_device.html
+++ b/apps/auth/templates/auth/register_device.html
@@ -118,7 +118,7 @@
 
         <button
         type="submit"
-        class="dt-auth-btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+        class="dt-auth-btn bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
         style="margin-top: 10px; height: auto; max-height: 40px; width: 200px;"
       >
         등록
