--- a/apps/auth/templates/auth/modify_pw.html
+++ b/apps/auth/templates/auth/modify_pw.html
@@ -41,7 +41,7 @@
 
     <button
     type="submit"
-    class="w-full bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
+    class="w-full bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
     style="margin-top: 10px;"
     >
     변경
