--- a/apps/server/templates/server/videos.html
+++ b/apps/server/templates/server/videos.html
@@ -1,30 +1,101 @@
 {% extends "server/base.html" %}
 {% block title %}Video Storage{% endblock %}
 {% block content %}
+<link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+<script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
 
-<div class="d-flex justify-content-around gap-3" style="margin-top: 16px;">
+<div class="container" style="margin-top: 25px;">
 
-{% if videos %}
+  {% if videos %}
+
+  <div class="d-flex flex-wrap justify-content-center gap-3">
     {% for video in videos %}
-    <div class="card" style="width: 13rem;">
-        <video class="card-img-top" controls onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';" style="max-height: 200px;">
-            <source src="{{ url_for('streaming.video_feed', filename=video.filename) }}" type="video/mp4">
-        </video>
-        <div class="card-body">
-          <h5 class="card-title"><strong>{{ video.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</strong></h5>
-          <p class="card-text">Duration: {{ video.duration }}</p>
-          <p class="card-text">{% if video.detected_objects %}Detected: {{ video.detected_objects }} {% endif %}</p>
-
-          <div class="btn_position">
-          <a href="{{ url_for('streaming.video_feed', filename=video.filename) }}" class="dt-auth-btn bg-custom text-white py-2 rounded-md hover:bg-rose-700 transition-colors"
-          style="text-align: center; width: 82px; max-height: 40px; min-width: 56px;" download="{{ video.filename }}">다운로드</a>
-        </div>
+    <div class="card" style="width: 370px; height: 420px;">
+      <video class="card-img-top video-player plyr" controls 
+        onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';">
+        <source src="{{ url_for('streaming.video_feed', filename=video.filename) }}" type="video/mp4">
+      </video>
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title"><strong>{{ video.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</strong>
+          <p></p>
+          ~ <strong>{{ video.end_time.strftime('%Y-%m-%d %H:%M:%S') if video.end_time else '알 수 없음' }}</strong>
+        </h5>
+        <p class="card-text">
+          {% if video.detected_objects %}
+              {% for obj in video.detected_objects.split(',')[:5] %}
+                  <span class="badge bg-secondary">{{ obj }}</span>
+              {% endfor %}
+          {% endif %}
+        </p>
+        <div class="mt-auto btn_position">
+          <a href="{{ url_for('streaming.video_feed', filename=video.filename) }}" class="dt-auth-btn bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
+        style="text-align: center; width: 82px; max-height: 40px; min-width: 56px; " download="{{ video.filename }}">다운로드</a>
         </div>
       </div>
+    </div>
     {% endfor %}
-{% else %}
-    <p>저장된 비디오가 없습니다.</p>
-{% endif %}
+  </div>
+
+    </div>
+
+  {% else %}
+      <p class="text-center">저장된 비디오가 없습니다.</p>
+  {% endif %}
 
 </div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center" style="padding-top: 40px;">
+    {% if pagination.has_prev %}
+      <li class="page-item">
+        <a class="page-link" href="{{ url_for('streaming.video_storage', page=pagination.prev_num) }}">이전</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled">
+        <span class="page-link">이전</span>
+      </li>
+    {% endif %}
+
+    {% for num in pagination.iter_pages() %}
+      {% if num %}
+        {% if num == pagination.page %}
+          <li class="page-item active">
+            <span class="page-link">{{ num }}</span>
+          </li>
+        {% else %}
+          <li class="page-item">
+            <a class="page-link" href="{{ url_for('streaming.video_storage', page=num) }}">{{ num }}</a>
+          </li>
+        {% endif %}
+      {% else %}
+        <li class="page-item disabled"><span class="page-link">…</span></li>
+      {% endif %}
+    {% endfor %}
+
+    {% if pagination.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="{{ url_for('streaming.video_storage', page=pagination.next_num) }}">다음</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled">
+        <span class="page-link">다음</span>
+      </li>
+    {% endif %}
+  </ul>
+</nav>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const players = [];
+        document.querySelectorAll('.plyr').forEach(video => {
+            let player = new Plyr(video, {
+                settings: ['speed'],
+                controls: ['play', 'progress', 'current-time', 'rewind', 'fast-forward', 'settings', 'fullscreen'],
+                speed: { selected: 1, options: [0.5, 1, 1.5, 2, 3] }
+            });
+            players.push(player);
+        });
+    });
+</script>
+
 {% endblock %}
