--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -198,25 +198,119 @@ label::after {
 }
 
 #yolo-stream {
-        transition: transform 0.1s ease-in-out; 
-    }
-    
-    .page-link {
-        background-color: #0D1B2A;  /* 딥 네이비 */
-        color: white;
-    }
-    
-    .page-link:hover {
-        background-color: #1B263B;  /* 어두운 블루 */
-        color: #fff;
-    }
-    
-    .page-item.active .page-link {
-        background-color: #0569a1;  /* 네온 블루 */
-        border-color: #0569a1;
-    }
+    transition: transform 0.1s ease-in-out; 
+}
 
-    .dt-auth-delete {
-        display: block;
-        margin: 10px auto 0 0;
-    }
+.page-link {
+    background-color: #0D1B2A;  /* 딥 네이비 */
+    color: white;
+}
+
+.page-link:hover {
+    background-color: #1B263B;  /* 어두운 블루 */
+    color: #fff;
+}
+
+.page-item.active .page-link {
+    background-color: #0569a1;  /* 네온 블루 */
+    border-color: #0569a1;
+}
+
+.dt-auth-delete {
+    display: block;
+    margin: 10px auto 0 0;
+}
+
+#search {
+    background-color: #f9fafb;
+    border-top-right-radius: 0% !important;
+    border-bottom-right-radius: 0% !important;
+}
+#search-box {
+    padding: 0% !important;
+    width: fit-content;
+}
+#search-box:focus {
+    border: #0569a1 !important;
+}
+#search-button {
+    background-color: unset;
+    border-radius: auto;
+}
+#search-button-box:hover {
+    background-color: #0569a1;
+    color: #ffffff;
+    border-top-right-radius: 8%;
+    border-bottom-right-radius: 8%;
+}
+
+.video-player {
+    width: 320px;
+    height: 240px;
+    object-fit: cover;
+    border-radius: 0%;
+}
+
+.video-card-wrapper {
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.2s linear;
+}
+.video-card-wrapper.selected {
+    background-color: #ffe0e0; /* Light red background */
+    
+}
+.video-checkbox {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    opacity: 0; /* Initially hidden */
+}
+.video-card-wrapper.selected .video-checkbox {
+    opacity: 1; /* Show checkbox when selected (optional, for visual confirmation) */
+}
+
+.select-delete-button {
+    width: fit-content;
+    height: fit-content;
+    margin: 0 0 5px auto;
+}
+
+.alert{
+    width: fit-content;
+    display: flex;
+    padding: 5px;
+    margin: 0;
+    left: 50%;
+}
+
+input[type="date"] {
+    padding-right: 1.5rem;
+    font-size: 1rem;
+  }
+  
+  /* 달력 아이콘 스타일 */
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    margin-left: -30px;
+    filter: invert(33%) sepia(100%) saturate(600%) hue-rotate(170deg) brightness(90%);
+    cursor: pointer;
+  }
+  
+  #datepicker1:focus {
+    all: unset;
+  }
+  #datepicker2:focus {
+    all: unset;
+  }
+
+.toast {
+    background-color: #cf220790 !important;
+    width: fit-content;
+}
+.toast-body {
+    padding: 3px 10px 3px 10px !important;
+}
+.toasty{
+    transform: translate(-50%, -50%);
+    left: 50%;
+}
