--- a/apps/server/templates/server/home.html
+++ b/apps/server/templates/server/home.html
@@ -11,7 +11,7 @@
   <div class="card" style="width: 18rem;">
     <img src="{{ url_for('streaming.video', camera_id=camera.camera_id) }}" 
       class="card-img-top" alt="video" 
-      onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';"/>
+      onerror="this.onerror=null; this.src = '../static/images/no_cam1.jpg';"/>
     <div class="card-body">
       {% if camera.device_name%}
       <h5 class="card-title">{{ camera.device_name }}</h5>
