--- a/apps/server/templates/server/videos.html
+++ b/apps/server/templates/server/videos.html
@@ -1,71 +1,89 @@
 {% extends "server/base.html" %}
 {% block title %}Video Storage{% endblock %}
+
 {% block content %}
+<link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+
 <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
 
-<div class="container" style="margin-top: 25px;">
+<div class="position-fixed top-10 p-3 toasty" style="z-index: 1055;" id="toast-container"></div>
+<form class="d-flex justify-content-center" role="search" method="GET" action="{{ url_for('streaming.video_storage') }}">
+  <div class="d-flex align-items-center btn rounded-md border-sky-700 hover:border-sky-700 text-gray-500" style="height: 35px; margin: 0;">
+    <input type="text" id="datepicker1" name="start_date" class="border-0 bg-[#f9fafb]" value="{{ request.args.get('start_date', '') }}" style="width: 90px; margin: 0; padding: 0; text-align: center;" placeholder="시작일" autocomplete="off">
+    <p>~</p>
+    <input type="text" id="datepicker2" name="end_date" class="border-0 bg-[#f9fafb]" value="{{ request.args.get('end_date', '') }}" style="width: 90px; margin: 0; padding: 0; text-align: center;" placeholder="종료일" autocomplete="off">
+  </div>
+  <div class="d-flex btn dt-auth-btn rounded-md border-sky-700 hover:border-sky-700" id="search-box" style="height: 35px; padding: 0; margin: 0;">
+    <input type="search" class="dt-auth-input px-3 py-2 border-none rounded-md focus:ring-0 focus:border-none hover:" id="search" name="label" value="{{ request.args.get('label', '') }}" placeholder="검색" style="width: 200px; margin: 0; padding: 0;" />
+    <div id="search-button-box">
+      <button id="search-button" class="btn dt-auth-btn bg-[#f9fafb] text-[#0569a1] py-2" type="submit" style="height: 35px; margin: 0;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+</form>
+  
+<form method="POST" action="{{ url_for('streaming.delete_videos') }}">
+  {{ form.csrf_token() }}
 
-  {% if videos %}
-
-  <div class="d-flex flex-wrap justify-content-center gap-3">
-    {% for video in videos %}
-    <div class="card" style="width: 370px; height: 420px;">
-      <video class="card-img-top video-player plyr" controls 
-        onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';">
-        <source src="{{ url_for('streaming.video_feed', filename=video.filename) }}" type="video/mp4">
-      </video>
-      <div class="card-body d-flex flex-column">
-        <h5 class="card-title"><strong>{{ video.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</strong>
-          <p></p>
-          ~ <strong>{{ video.end_time.strftime('%Y-%m-%d %H:%M:%S') if video.end_time else '알 수 없음' }}</strong>
-        </h5>
-        <p class="card-text">
-          {% if video.detected_objects %}
-              {% for obj in video.detected_objects.split(',')[:5] %}
-                  <span class="badge bg-secondary">{{ obj }}</span>
+  <div class="container" style="display: flexbox; width: fit-content;">
+    {% if videos %}
+    <div class="select-delete-button gap-4 text-sm text-gray-600">
+      <button type="button" id="select-delete-button" class="hover:text-custom transition-colors text-base font-bold">편집</button>
+      <button type="button" id="cancel-edit-button" class="hover:text-custom transition-colors" style="display: none; margin-right: 10px;">종료</button>
+      <button type="submit" id="delete-confirm-button" class="hover:text-[#c73333] transition-colors text-base font-bold" style="display: none;" onclick="return confirm('삭제하시겠습니까?')">삭제</button>
+    </div>
+    <div class="d-flex justify-content-center gap-3 flex-wrap">
+      {% for video in videos %}
+      <div class="card video-card-wrapper" style="width: 320px; min-width: 260px; border-top-left-radius: 0; border-top-right-radius: 0;" data-filename="{{ video.filename }}">
+        <input type="checkbox" class="video-checkbox" name="selected_videos" value="{{ video.filename }}">
+        <video class="card-img-top video-player plyr" controls onerror="this.onerror=null; this.src = '../static/images/no_cam.jpg';">
+          <source src="{{ url_for('streaming.video_feed', filename=video.filename) }}" type="video/mp4">
+        </video>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title"><strong>{{ video.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</strong>
+            <p></p>
+            ~ <strong>{{ video.end_time.strftime('%Y-%m-%d %H:%M:%S') if video.end_time else '알 수 없음' }}</strong>
+          </h5>
+          <p class="card-text">
+            {% if video.detected_objects %}
+              {% for obj in video.detected_objects_list[:5] %}
+                <span class="badge bg-secondary">{{ obj }}</span>
               {% endfor %}
-          {% endif %}
-        </p>
-        <div class="mt-auto btn_position">
-          <a href="{{ url_for('streaming.video_feed', filename=video.filename) }}" class="dt-auth-btn bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
-        style="text-align: center; width: 82px; max-height: 40px; min-width: 56px; " download="{{ video.filename }}">다운로드</a>
+            {% endif %}
+          </p>
+          <div class="mt-auto btn_position">
+            <a href="{{ url_for('streaming.video_feed', filename=video.filename) }}"
+            class="dt-auth-btn bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors"
+            style="text-align: center; width: 82px; max-height: 40px; min-width: 56px;" download="{{ video.filename }}">다운로드</a>
+          </div>
         </div>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-
-    </div>
-
-  {% else %}
-      <p class="text-center">저장된 비디오가 없습니다.</p>
-  {% endif %}
-
-</div>
+</form>
 
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center" style="padding-top: 40px;">
     {% if pagination.has_prev %}
       <li class="page-item">
-        <a class="page-link" href="{{ url_for('streaming.video_storage', page=pagination.prev_num) }}">이전</a>
+        <a class="page-link" href="{{ url_for('streaming.video_storage', **dict(request.args, page=pagination.prev_num)) }}">이전</a>
       </li>
     {% else %}
-      <li class="page-item disabled">
-        <span class="page-link">이전</span>
-      </li>
+      <li class="page-item disabled"><span class="page-link">이전</span></li>
     {% endif %}
 
     {% for num in pagination.iter_pages() %}
       {% if num %}
         {% if num == pagination.page %}
-          <li class="page-item active">
-            <span class="page-link">{{ num }}</span>
-          </li>
+          <li class="page-item active"><span class="page-link">{{ num }}</span></li>
         {% else %}
-          <li class="page-item">
-            <a class="page-link" href="{{ url_for('streaming.video_storage', page=num) }}">{{ num }}</a>
-          </li>
+          <li class="page-item"><a class="page-link" href="{{ url_for('streaming.video_storage', **dict(request.args, page=num)) }}">{{ num }}</a></li>
         {% endif %}
       {% else %}
         <li class="page-item disabled"><span class="page-link">…</span></li>
@@ -74,28 +92,116 @@
 
     {% if pagination.has_next %}
       <li class="page-item">
-        <a class="page-link" href="{{ url_for('streaming.video_storage', page=pagination.next_num) }}">다음</a>
+        <a class="page-link" href="{{ url_for('streaming.video_storage', **dict(request.args, page=pagination.next_num)) }}">다음</a>
       </li>
     {% else %}
-      <li class="page-item disabled">
-        <span class="page-link">다음</span>
-      </li>
+      <li class="page-item disabled"><span class="page-link">다음</span></li>
     {% endif %}
   </ul>
 </nav>
 
+{% else %}
+<div style="display: flex; justify-content: center; align-items: center;">
+  <img src="../static/images/empty.png" style="width: 320px;" alt="empty">
+</div>
+<h2 class="text-2xl font-bold text-center mb-12">저장된 동영상이 없습니다</h2>
+{% endif %}
+</div>
+
+<!-- Scripts -->
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const players = [];
-        document.querySelectorAll('.plyr').forEach(video => {
-            let player = new Plyr(video, {
-                settings: ['speed'],
-                controls: ['play', 'progress', 'current-time', 'rewind', 'fast-forward', 'settings', 'fullscreen'],
-                speed: { selected: 1, options: [0.5, 1, 1.5, 2, 3] }
-            });
-            players.push(player);
-        });
+  document.addEventListener('DOMContentLoaded', function () {
+    const toastContainer = document.getElementById('toast-container');
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% for category, message in messages %}
+        const toastHTML = `
+          <div class="toast align-items-center text-bg-{{ category }} border-0 mb-2" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+              <div class="toast-body">{{ message }}</div>
+              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+          </div>`;
+        toastContainer.insertAdjacentHTML('beforeend', toastHTML);
+      {% endfor %}
+    {% endwith %}
+
+    const toastElList = [].slice.call(document.querySelectorAll('.toast'));
+    toastElList.forEach(toastEl => {
+      new bootstrap.Toast(toastEl, { delay: 5000 }).show();
     });
+
+    const players = [];
+    document.querySelectorAll('.plyr').forEach(video => {
+      let player = new Plyr(video, {
+        settings: ['speed'],
+        controls: ['play', 'progress', 'current-time', 'rewind', 'fast-forward', 'settings', 'fullscreen'],
+        speed: { selected: 1, options: [0.5, 1, 1.5, 2, 3] }
+      });
+      players.push(player);
+    });
+
+    let isSelectionMode = false;
+    const selectDeleteButton = document.getElementById('select-delete-button');
+    const deleteConfirmButton = document.getElementById('delete-confirm-button');
+    const cancelEditButton = document.getElementById('cancel-edit-button');
+    const videoCardWrappers = document.querySelectorAll('.video-card-wrapper');
+
+    selectDeleteButton.addEventListener('click', () => {
+      isSelectionMode = true;
+      selectDeleteButton.style.display = 'none';
+      deleteConfirmButton.style.display = 'inline-block';
+      cancelEditButton.style.display = 'inline-block';
+
+      videoCardWrappers.forEach(card => {
+        card.style.cursor = 'pointer';
+        card.onclick = function () {
+          this.classList.toggle('selected');
+          const checkbox = this.querySelector('.video-checkbox');
+          checkbox.checked = !checkbox.checked;
+        };
+      });
+    });
+
+    cancelEditButton.addEventListener('click', () => {
+      isSelectionMode = false;
+      selectDeleteButton.style.display = 'inline-block';
+      deleteConfirmButton.style.display = 'none';
+      cancelEditButton.style.display = 'none';
+
+      videoCardWrappers.forEach(card => {
+        card.style.cursor = 'default';
+        card.classList.remove('selected');
+        card.onclick = null;
+        const checkbox = card.querySelector('.video-checkbox');
+        checkbox.checked = false;
+      });
+    });
+
+    deleteConfirmButton.addEventListener('click', event => {
+      const selectedVideos = document.querySelectorAll('.video-card-wrapper.selected');
+      if (selectedVideos.length === 0) {
+        alert('선택된 영상이 없습니다.');
+        event.preventDefault();
+      }
+    });
+  });
+
+  const startElem = document.getElementById('datepicker1');
+  const endElem = document.getElementById('datepicker2');
+
+  new Datepicker(startElem, {
+    language: 'ko',
+    format: 'yyyy-mm-dd',
+    autohide: true
+  });
+
+  new Datepicker(endElem, {
+    language: 'ko',
+    format: 'yyyy-mm-dd',
+    autohide: true
+  });
+  
 </script>
 
 {% endblock %}
