--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -37,6 +37,10 @@ input[type="search"] {
     font-size: 14px;
     color: #bf3644;
 }
+.register-flash {
+    font-size: 14px;
+    color: #198754;
+}
 .dt-auth-input {
         margin-top: 10px;
 }
