블러 처리된 영상을 따로 다운받을 수 있도록 기능 추가

--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -352,7 +352,7 @@ input[type="date"] {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
-.card-body {
+.ccard-body {
   height: 150px;
   padding: 10px 16px;
   text-align: center;
