--- a/apps/server/templates/server/base.html
+++ b/apps/server/templates/server/base.html
@@ -78,11 +78,13 @@
                 data-page="info"
                 >{{ current_user.user_name }}</a
               >
-              <a
-                href="{{  url_for('auth.logout')  }}"
-                class="border-transparent text-gray-500 hover:text-custom inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium"
-                >로그아웃</a
-              >
+              <form action="{{ url_for('auth.logout') }}" method="POST" class="inline-flex items-center px-1 pt-1  text-sm font-medium {% if active_page == 'info' %}border-custom text-custom font-medium{% else %}border-transparent text-gray-500 hover:text-custom{% endif %}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                <button type="submit" class="border-transparent text-gray-500 hover:text-custom ">
+                    로그아웃
+                </button>
+            </form>
+
               {% else %}
               <a
                 href="{{  url_for('auth.login')  }}"
