--- a/apps/server/templates/server/home.html
+++ b/apps/server/templates/server/home.html
@@ -13,7 +13,7 @@
       <div class="ccard-body">
         <h5 class="font-bold text-2xl">{{ camera.device_name or 'Knockx2' }}</h5>
         <p>Device ID: {{ camera.device_id }}</p>
-        <a href="{{ url_for('streaming.streaming_page', camera_id=camera.camera_id) }}" class="btn-watch">보기</a>
+        <a href="{{ url_for('streaming.streaming_page', camera_id=camera.camera_id) }}" class="btn-watch btn bg-[#0D1B2A] text-white py-2 rounded-md hover:bg-sky-700 transition-colors">보기</a>
       </div>
     </div>
     {% endfor %}
