--- a/apps/auth/templates/auth/support.html
+++ b/apps/auth/templates/auth/support.html
@@ -6,6 +6,31 @@
     <div class="absolute inset-0 flex items-center justify-end pr-24">
       <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold mb-6 text-center">1:1 문의</h2>
+<form action="{{ url_for('auth.support') }}">
+
+        {% if current_user.is_authenticated %}
+        <div class="form-floating">
+          <input class="form-control dt-auth-input w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" type="text"  value="{{ user.email }}" disabled>
+            <label for="floatingEmail">이메일</label>
+        </div>
+        {% else %}
+        <div class="form-floating">
+          <input
+            type="email"
+            class="form-custom form-control dt-auth-input {% if form.email.errors %}is-invalid{% elif form.email.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
+            id="floatingEmail"
+            name="email"
+            value="{{ form.email.data or ''}}"
+            placeholder=""
+          />
+          <label for="floatingEmail">이메일</label>
+          {% if form.email.errors %}
+          <div class="invalid-feedback">{{ form.email.errors[0] }}</div>
+          {% endif %}
+        </div>
+        
+        {% endif %}
+
 
   <button
     type="submit"
@@ -14,6 +39,8 @@
     >
     제출
   </button>
+</form>
+
 </div>
 </div>
 </div>
