--- a/apps/auth/templates/auth/support.html
+++ b/apps/auth/templates/auth/support.html
@@ -6,13 +6,55 @@
     <div class="absolute inset-0 flex items-center justify-end pr-24">
       <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold mb-6 text-center">1:1 문의</h2>
-<form action="{{ url_for('auth.support') }}">
+
+{% with messages =
+          get_flashed_messages(with_categories=true) %} {% if messages %}
+          <div class="register-flash">
+            {% for category, message in messages %}
+{{ message }}
+            {% endfor %}
+          </div>
+          {% endif %} {% endwith %}
+<form 
+  action="{{ url_for('auth.support') }}"
+  method="POST" 
+  enctype="multipart/form-data">
+  {{ form.csrf_token }}
+  <div class="dropdown">
+    <button style="text-align: start;" class="text-sm form-custom form-control dt-auth-input {% if form.title.errors %}is-invalid{% elif form.title.data %}is-valid{% endif %} w-full border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      문의 유형 선택
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">카메라 연동 문의</a></li>
+      <li><a class="dropdown-item" href="#">카메라 설치 및 A/S 문의</a></li>
+      <li><a class="dropdown-item" href="#">계정 관련 문의</a></li>
+      <li><a class="dropdown-item" href="#">기타</a></li>
+    </ul>
+  </div>
+
+  <div class="form-floating">
+    <input
+      type="text"
+      class="form-custom form-control dt-auth-input {% if form.title.errors %}is-invalid{% elif form.title.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
+      id="floatingTitle"
+      name="title"
+      value="{{ form.title.data or ''}}"
+      placeholder=""
+    />
+    <label for="floatingTitle">제목</label>
+    {% if form.title.errors %}
+    <div class="invalid-feedback">{{ form.title.errors[0] }}</div>
+    {% endif %}
+  </div>
+
 
         {% if current_user.is_authenticated %}
         <div class="form-floating">
           <input class="form-control dt-auth-input w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" type="text"  value="{{ user.email }}" disabled>
             <label for="floatingEmail">이메일</label>
         </div>
+        <input type="hidden" name="email" value="{{ user.email }}">
+
         {% else %}
         <div class="form-floating">
           <input
@@ -31,6 +73,26 @@
         
         {% endif %}
 
+          <textarea
+            class="form-custom form-control dt-auth-input {% if form.text.errors %}is-invalid{% elif form.text.data %}is-valid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom"
+            name="text"
+            value="{{ form.text.data or ''}}"
+            placeholder="문의 사항"
+            style="height: 200px;"
+          ></textarea>
+          {% if form.text.errors %}
+          <div class="invalid-feedback">{{ form.text.errors[0] }}</div>
+          {% endif %}
+
+          <div class="file-upload-wrapper">
+            <label for="fileInput" class="file-upload-label">파일 선택</label>
+            <input
+              type="file"
+              id="fileInput"
+              name="file"
+              class="file-upload-input"
+            />
+          </div>
 
   <button
     type="submit"
