--- a/apps/auth/templates/auth/modify_pw.html
+++ b/apps/auth/templates/auth/modify_pw.html
@@ -12,6 +12,7 @@
     method="POST"
     novalidate="novalidate"
   >
+  {{ form.hidden_tag() }}
   {% for message in get_flashed_messages() %}
   <span class="dt-auth-flash">{{  message  }}</span>
   {% endfor %}
@@ -19,7 +20,10 @@
 
   <div class="form-floating">
     <input type="password" class="form-custom form-control dt-auth-input {% if form.current_password.errors %}is-invalid{% endif %} w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" 
-           id="floatingCurrentPassword" name="current_password" placeholder="">
+    id="{{ form.current_password.id }}" name="{{ form.current_password.name }}" value="{{ form.current_password.data or '' }}" placeholder=""
+    {% if form.current_password.disabled %} disabled {% endif %} required>
+    <!-- 임시 비밀번호를 사용자의 현재 비밀번호로 설정 -->
+    <input type="hidden" name="current_password" value="{{ form.current_password.data or session.get('temp_password') }}">
     <label for="floatingCurrentPassword">현재 비밀번호 <span style="color: red;">*</span></label>
     {% if form.current_password.errors %}
         <div class="invalid-feedback">
