- 캡처 기능 삭제 - Log 삭제 - 전체화면 아이콘화 - 디바이스 등록 아이콘화

--- a/apps/auth/templates/auth/info.html
+++ b/apps/auth/templates/auth/info.html
@@ -6,8 +6,18 @@
 
 <div class="absolute inset-0 flex items-center justify-end pr-24">
   <div class="w-96 p-8 bg-white rounded-lg shadow-lg">
-    <h2 class="text-2xl font-bold mb-6 text-center">회원 정보</h2>
-      
+    <h2 class="text-2xl font-bold text-center">회원 정보</h2>
+    
+    <div class="flex justify-end text-gray-700">
+      <a href="{{ url_for('auth.register_device', user_id=current_user.id)}}" 
+      class="delete-user border-2 hover:bg-gray-100 transition-colors hover:text-custom text-base font-bold">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-webcam-fill" viewBox="0 0 16 16">
+        <path d="M6.644 11.094a.5.5 0 0 1 .356-.15h2a.5.5 0 0 1 .356.15c.175.177.39.347.603.496a7 7 0 0 0 .752.456l.01.006h.003A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.224-.947l.002-.001.01-.006a4 4 0 0 0 .214-.116 8 8 0 0 0 .539-.34c.214-.15.428-.319.603-.496M7 6.5a1 1 0 1 1 2 0 1 1 0 0 1-2 0"/>
+        <path d="M2 3a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2zm6 1.5a2 2 0 1 1 0 4 2 2 0 0 1 0-4M12.5 7a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1"/>
+      </svg>
+      </a>
+    </div>
+    
       <div class="form-floating">
         <input class="form-control dt-auth-input w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom" type="text"  value="{{ current_user.user_name }}" disabled>
       <label for="floatingName">이름</label>
@@ -40,12 +50,14 @@
     <div class="flex justify-end gap-4 mt-4 text-sm text-gray-600">
       <a href="{{ url_for('auth.update', user_id=current_user.id)}}" class="hover:text-custom">회원 정보 수정</a
       ><a href="{{ url_for('auth.modify_pw', user_id=current_user.id)}}" class="hover:text-custom">비밀번호 변경</a
-      ><a href="{{ url_for('auth.register_device', user_id=current_user.id)}}" class="hover:text-custom text-base font-bold"
-        >기기 등록</a
       >
+      <a href="{{ url_for('auth.delete_user', user_id=current_user.id) }}"
+      class="hover:text-[#c73333] transition-colors text-sm text-base"
+      >회원 탈퇴</a>
     </div>
     </div>
   </div>
+
 </div>
 {% endblock %}
 
