--- a/apps/server/static/css/style.css
+++ b/apps/server/static/css/style.css
@@ -394,57 +394,25 @@ input[type="date"] {
     background-color: #0569a1 !important; 
     border-color: #0569a1 !important;
   }
-  /*
-  .form-check-input {
-    width: 3rem  !important;
-    height: 1.5rem  !important;
-    background-color: #d1d5db  !important;
-    border-radius: 1rem  !important;
-    border: none  !important;
-    transition: background-color 0.3s, box-shadow 0.3s  !important;
-    box-shadow: inset 0 0 0.25rem rgba(0, 0, 0, 0.1)  !important;
-  }
   
-  .form-check-input:checked::before {
-    transform: translateX(1.5rem)  !important;
-  }
-  
-  .form-check-input::before {
-    content: "" !important;
-    position: absolute !important;
-    width: 1.2rem !important;
-    height: 1.2rem !important;
-    background-color: #fff;
-    border-radius: 50%;
-    top: 0.4rem;
-    left: 0.15rem;
-    transition: transform 0.3s ease;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  .form-check {
-    position: relative;
-  } */
-
-
   .file-upload-wrapper {
-    display: flex;
-    align-items: center;
-    border: 1px solid #d1d5db; /* gray-300 */
-    border-radius: 0.375rem; /* rounded-md */
-    overflow: hidden;
-    margin-top: 10px;
+      display: flex;
+      align-items: center;
+      border: 1px solid #d1dbd5; /* gray-300 */
+      border-radius: 0.375rem; /* rounded-md */
+      overflow: hidden;
+      margin-top: 10px;
     height: 30px;
-  }
+}
 
-  .file-upload-label {
+.file-upload-label {
     background-color: #bad4e3;
     padding: 0.5rem 1rem;
     cursor: pointer;
     white-space: nowrap;
-  }
+}
 
-  .file-upload-input {
+.file-upload-input {
     flex: 1;
     padding: 0.5rem;
     border: none;
@@ -452,7 +420,13 @@ input[type="date"] {
     height: auto;
     width: 0;
     margin: 0 5px 0 5px;
-  }
-  .file-upload-input::-webkit-file-upload-button {
+}
+.file-upload-input::-webkit-file-upload-button {
     display: none; /* 기본 버튼 숨김 */
-  }
+}
+
+.delete-user{
+    padding: 5px;
+    border-radius: 33%;
+    text-align: center;
+}
